# authentic-self

./: CHANGELOG.md  QUESTIONS.md  README.md  READY.txt  START_HERE.txt  SYNTHESIS.md  pyproject.toml  setup.py
authentic_self/: __init__.py  generate_soul.py  soul_diff.py
examples/claude-haiku-4.5/: IDENTITY.md
scripts/: generate_soul.py  soul_diff.py
