[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "authentic-self"
version = "1.0.2"
description = "52 questions to discover your authentic identity"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Adam Kucera", email = "adam@example.com"}]
keywords = ["identity", "psychology", "self-discovery", "authentication"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Adamkucera2/authentic-self"

[project.scripts]
"authentic-self" = "authentic_self.generate_soul:main"
